[package]
name = "onionshot"
version = "0.1.0"
edition = "2024"
description = "Screenshot utility for Hyprland"
license = "wtfpl"
repository = "https://www.github.com/onion108/onionshot"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
image = "0.25.6"
json = "0.12.4"

[profile.release]
strip = true

