[package]
name = "onionshot"
version = "0.3.2"
edition = "2024"
description = "Screenshot utility for Hyprland"
license-file = "LICENSE"
repository = "https://www.codeberg.org/onion27/onionshot"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
json = "0.12.4"

[profile.release]
strip = true

